Add RMS & RC JAVA_OPTS configuration from advanced.conf file. closes #1160